samples/_failures_safe/1761516417_cef00f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ccc1ec1.c: In function ‘main’:
./samples/SAFE/__tmp_5ccc1ec1.c:165:48: error: expected ‘)’ at end of input
  165 |     if (scanf("%d", &choice) != 1 || choice < 1
      |        ~                                       ^
      |                                                )
./samples/SAFE/__tmp_5ccc1ec1.c:165:5: error: expected declaration or statement at end of input
  165 |     if (scanf("%d", &choice) != 1 || choice < 1
      |     ^~
